--- a/app/src/main/res/layout-land/card_restaurant.xml
+++ b/app/src/main/res/layout-land/card_restaurant.xml
@@ -15,23 +15,12 @@
     android:id="@+id/cardview_favourite"
     tools:ignore="MissingDefaultResource">
 
-    <!--
-        In the above cardview widget
-        cardelevation property will give elevation to your card view
-        card corner radius will provide radius to your card view
-        card background color will give background color to your card view
-        card max elevation will give the cardview maximum elevation
-        card prevent corner overlap will add padding to CardView on v20 and
-        before to prevent intersections between the Card content and rounded corners.
-        card use compact padding will add padding in API v21+ as well to have the same
-        measurements with previous versions.
-    -->
 
-    <RelativeLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!--ImageVIew to display our Course Image-->
         <ImageView
             android:id="@+id/icon_card_favourite"
             android:layout_width="@dimen/image_view_list"
@@ -40,7 +29,14 @@
             android:contentDescription="@string/app_name"
             android:padding="5dp"
 
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".1"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias=".05" />
+
 
         <ProgressBar
             android:id="@+id/progress_bar_card_favourite"
@@ -51,188 +47,190 @@
             android:layout_alignEnd="@+id/icon_card_favourite"
             android:layout_alignBottom="@+id/icon_card_favourite"
             android:layout_gravity="center"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:visibility="visible" />
-
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/icon_card_favourite"
+            app:layout_constraintEnd_toEndOf="@+id/icon_card_favourite"
+            app:layout_constraintStart_toStartOf="@+id/icon_card_favourite"
+            app:layout_constraintTop_toTopOf="@+id/icon_card_favourite" />
 
         <TextView
             android:id="@+id/textview_card_favourite_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
             android:layout_toEndOf="@id/icon_card_favourite"
+            android:gravity="left"
             android:text="titolo"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_medium"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/icon_card_favourite"
+            app:layout_constraintTop_toTopOf="parent"
+
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintVertical_bias=".1"
+
+            />
 
         <TextView
             android:id="@+id/textview_card_favourite_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
             android:layout_toEndOf="@id/textview_card_favourite_title"
+            android:gravity="left"
             android:text="Categoria"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_medium"
-            />
-
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintStart_toEndOf="@+id/icon_card_favourite"
+            app:layout_constraintTop_toBottomOf="@+id/textview_card_favourite_title"
+            app:layout_constraintVertical_bias=".1" />
 
         <TextView
             android:id="@+id/textview_card_favourite_adress"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textview_card_favourite_title"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
-            android:gravity="left"
-            android:layout_toEndOf="@id/icon_card_favourite"
-            android:textSize="@dimen/text_size_small"
+
             android:drawablePadding="2dp"
+            android:gravity="left"
             android:text="Via ancona 13 - Palazzolo"
-            />
+            android:textSize="@dimen/text_size_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/icon_card_favourite"
+            app:layout_constraintVertical_bias=".1" />
 
         <TextView
             android:id="@+id/textview_card_restaurant_tag1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textview_card_favourite_adress"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:gravity="left"
             android:layout_toEndOf="@id/icon_card_favourite"
-            android:textSize="@dimen/text_size_micro"
             android:drawablePadding="2dp"
+            android:gravity="left"
             android:text="Tag 1"
-            />
+            android:textSize="@dimen/text_size_micro"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textview_card_favourite_adress"
+            app:layout_constraintVertical_bias=".1" />
 
-        <ImageView
-            android:id="@+id/star1_card_restaurant"
-            android:layout_width="@dimen/star"
-            android:layout_height="@dimen/star"
-
-            android:layout_margin="10dp"
-            android:padding="0dp"
-            android:layout_marginStart="10dp"
-            android:layout_below="@id/icon_card_favourite"
-            android:src="@drawable/ic_baseline_star_24"
-            app:tint="@color/yellow_star" />
-
-        <ImageView
-            android:id="@+id/star2_card_restaurant"
-            android:layout_width="@dimen/star"
-            android:layout_height="@dimen/star"
-
-            android:layout_below="@id/icon_card_favourite"
-            android:layout_marginStart="-10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/star1_card_restaurant"
-
-            android:padding="0dp"
-            android:src="@drawable/ic_baseline_star_24"
-            app:tint="@color/yellow_star" />
-
-        <ImageView
-            android:id="@+id/star3_card_restaurant"
-            android:layout_width="@dimen/star"
-            android:layout_height="@dimen/star"
-
-            android:layout_below="@id/icon_card_favourite"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/star2_card_restaurant"
-
-            android:padding="0dp"
-            android:src="@drawable/ic_baseline_star_24"
-            app:tint="@color/yellow_star" />
-        <ImageView
-            android:id="@+id/star4_card_restaurant"
-            android:layout_width="@dimen/star"
-            android:layout_height="@dimen/star"
-
-            android:layout_below="@id/icon_card_favourite"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/star3_card_restaurant"
-
-            android:padding="0dp"
-            android:src="@drawable/ic_baseline_star_24"
-            app:tint="@color/yellow_star" />
-        <ImageView
-            android:id="@+id/star5_card_restaurant"
-            android:layout_width="@dimen/star"
-            android:layout_height="@dimen/star"
-
-            android:layout_below="@id/icon_card_favourite"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/star4_card_restaurant"
-
-            android:padding="0dp"
-            android:src="@drawable/ic_baseline_star_24"
-            app:tint="@color/yellow_star" />
-        <TextView
-            android:id="@+id/textview_card_restaurant_number_review"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/icon_card_favourite"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/star5_card_restaurant"
-            android:text="100 review"
-            android:textSize="@dimen/text_size_small"></TextView>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textview_card_restaurant_tag1"
+            app:layout_constraintVertical_bias=".2"
+            >
+
+            <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/rating_card_restaurant"
+                style="@style/RatingBar_small"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/star"
+                android:numStars="5"
+                android:padding="0dp"
+
+                android:rating="0"
+                android:stepSize="0.5"
+                android:theme="@style/RatingBar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias=".1" />
+
+            <TextView
+                android:id="@+id/textview_card_restaurant_number_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/rating_card_restaurant"
+                android:text="100 review"
+                android:textSize="@dimen/text_size_small"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".8"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias=".1"
+
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+        <View
+            android:id="@+id/view1_cardreview"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+
+            android:background="@color/grey"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintWidth_percent=".8"
+
+
+            />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_card_restaurant_map"
-            style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="80dp"
-            android:layout_toEndOf="@+id/textview_card_restaurant_number_review"
-            android:gravity="left"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            app:icon="@drawable/ic_baseline_directions_24"
             android:text="Direction"
             android:textSize="@dimen/text_size_medium"
-            app:icon="@drawable/ic_baseline_directions_24"
             app:iconSize="@dimen/star"
-            app:strokeColor="@color/red"
-            app:strokeWidth="3dp">
 
-        </com.google.android.material.button.MaterialButton>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view1_cardreview"
+            app:layout_constraintVertical_bias=".1"
+            app:layout_constraintHorizontal_bias=".1"
+            />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_card_restaurant_call"
-            style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="80dp"
-            android:layout_toEndOf="@+id/btn_card_restaurant_map"
-            android:gravity="right"
-            android:text="Call"
-            android:textSize="@dimen/text_size_medium"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+            android:text="CALL"
             app:icon="@drawable/ic_baseline_call_24"
+            android:textSize="@dimen/text_size_medium"
             app:iconSize="@dimen/star"
-            app:strokeColor="@color/red"
-            app:strokeWidth="3dp">
 
-        </com.google.android.material.button.MaterialButton>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view1_cardreview"
+            app:layout_constraintVertical_bias=".1"
+            app:layout_constraintHorizontal_bias=".9"
+            />
 
-    </RelativeLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
