--- a/app/src/main/res/layout/card_notification_new.xml
+++ b/app/src/main/res/layout/card_notification_new.xml
@@ -60,7 +60,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="33dp"
-            android:visibility="invisible" />
+            android:visibility="gone" />
 
 
         <!--Text View to display Course Name-->
@@ -120,6 +120,7 @@
             android:layout_alignEnd="@+id/icon_card_favourite"
             android:layout_alignBottom="@+id/icon_card_favourite"
             android:layout_marginEnd="90dp"
-            android:layout_marginBottom="90dp" />
+            android:layout_marginBottom="90dp"
+            android:visibility="gone"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
