--- a/app/src/main/res/layout/fragment_restaurant_client.xml
+++ b/app/src/main/res/layout/fragment_restaurant_client.xml
@@ -347,27 +347,6 @@
                     app:layout_constraintVertical_bias=".1"
                     tools:ignore="MissingConstraints" />
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/floatingActionButton_removefavourite_fragment_restaurant"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-
-                    android:visibility="gone"
-                    app:backgroundTint="#FFEB3B"
-
-
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias=".1"
-                    app:layout_constraintHorizontal_bias=".9"
-
-                    app:rippleColor="@color/yellow_star"
-                    app:srcCompat="@drawable/ic_baseline_remove_circle_24"
-
-                    />
 
 
 
@@ -379,17 +358,38 @@
                 android:layout_height="wrap_content"
 
                 android:clickable="true"
-                android:visibility="visible"
+                android:visibility="gone"
 
                 app:backgroundTint="#FFEB3B"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.859"
+                app:layout_constraintHorizontal_bias="0.9"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/constraintLayout_restaurant"
                 app:layout_constraintVertical_bias="0.0"
                 app:rippleColor="@color/yellow_star"
                 app:srcCompat="@drawable/ic_baseline_star_24" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton_removefavourite_fragment_restaurant"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+
+                android:visibility="visible"
+                app:backgroundTint="#FFEB3B"
+
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".9"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_tag1_fragment_restaurant"
+
+                app:layout_constraintVertical_bias=".1"
+                app:rippleColor="@color/yellow_star"
+
+                app:srcCompat="@drawable/ic_baseline_remove_circle_24" />
 
 
             <com.google.android.material.button.MaterialButton
