--- a/app/src/main/res/values-normal/dimens.xml
+++ b/app/src/main/res/values-normal/dimens.xml
@@ -32,6 +32,7 @@
     <dimen name="text_size_medium_large">20sp</dimen>
     <dimen name="text_size_large">22sp</dimen>
     <dimen name="text_size_extra_large">30sp</dimen>
+    <dimen name="text_size_extra_extra_large">40sp</dimen>
 
 
 
@@ -80,6 +81,9 @@
 
     <!-- title review-->
     <dimen name="title_review">100dp</dimen>
+
+    <!-- card-->
+    <dimen name="card_dimension">240dp</dimen>
 
 
 </resources>
