--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,98 +1,271 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".menu.Activity_Menu">
 
-    <!--<com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/appBar_menu"
-        android:theme="@style/Theme.Restaurant.AppBarOverlay">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.Restaurant.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>-->
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
 
-        <Button
-            android:id="@+id/button_menu_modificaaccount"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Account"
+        tools:ignore="MissingConstraints">
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_restaurant_home_client"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/card_dimension"
+            android:layout_margin="10dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.774"
-            app:layout_constraintWidth_percent="0.8"></Button>
+            app:layout_constraintVertical_bias=".05"
+            app:layout_constraintHorizontal_bias=".5"
 
-        <Button
-            android:id="@+id/button_menu_map"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Test button"
+
+            android:foreground="?attr/selectableItemBackground"
+            android:clickable="true"
+
+            >
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/constraintLayout1_home_client">
+
+
+
+
+
+
+                    <ImageView
+                        android:id="@+id/imageView_restaurant_home_client"
+                        android:foreground="@drawable/gradient_image"
+                        android:foregroundTintMode="src_atop"
+
+                        android:scaleType="centerCrop"
+                        android:adjustViewBounds="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout1_home_client"
+                        app:layout_constraintEnd_toEndOf="@+id/constraintLayout1_home_client"
+                        app:layout_constraintStart_toStartOf="@+id/constraintLayout1_home_client"
+                        app:layout_constraintTop_toTopOf="@+id/constraintLayout1_home_client"
+                        app:srcCompat="@drawable/restaurant_image"
+                        />
+
+                    <TextView
+                        android:id="@+id/textview_restaurant_menu_client"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/title_card"
+                        android:textColor="@color/white"
+                        android:text="@string/restaurant"
+                        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout1_home_client"
+                        app:layout_constraintEnd_toEndOf="@+id/constraintLayout1_home_client"
+                        app:layout_constraintStart_toStartOf="@id/constraintLayout1_home_client"
+                        app:layout_constraintTop_toTopOf="@+id/constraintLayout1_home_client"
+                        tools:ignore="MissingConstraints"
+                        app:layout_constraintVertical_bias=".9"
+                        />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_favourite_home_client"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/card_dimension"
+            android:layout_margin="10dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.634"
+            app:layout_constraintHorizontal_bias=".5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.623"
-            app:layout_constraintWidth_percent="0.8">
+            app:layout_constraintTop_toBottomOf="@+id/cardview_restaurant_home_client"
 
-        </Button>
+            app:layout_constraintVertical_bias=".0">
 
-        <Button
-            android:id="@+id/button_menu_logout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="logout (user)"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout2_home_client"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <ImageView
+                    android:id="@+id/imageView_favourite_home_client"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:adjustViewBounds="true"
+                    android:foreground="@drawable/gradient_image"
+                    android:foregroundTintMode="src_atop"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2_home_client"
+                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout2_home_client"
+                    app:layout_constraintStart_toStartOf="@+id/constraintLayout2_home_client"
+                    app:layout_constraintTop_toTopOf="@+id/constraintLayout2_home_client"
+                    app:srcCompat="@drawable/favourite_image" />
+
+                <TextView
+                    style="@style/title_card"
+                    android:id="@+id/textview_favourite_menu_client"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/favourites"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2_home_client"
+                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout2_home_client"
+                    app:layout_constraintStart_toStartOf="@id/constraintLayout2_home_client"
+                    app:layout_constraintTop_toTopOf="@+id/constraintLayout2_home_client"
+                    app:layout_constraintVertical_bias=".9"
+                    tools:ignore="MissingConstraints" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_profile_home_client"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/card_dimension"
+            android:layout_margin="10dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_menu_modificaaccount"
-            app:layout_constraintVertical_bias="0.339"
-            app:layout_constraintWidth_percent="0.8">
+            app:layout_constraintTop_toBottomOf="@+id/cardview_favourite_home_client"
 
-        </Button>
+            app:layout_constraintVertical_bias=".0">
 
-        <Button
-            android:id="@+id/btn_menu_nuova_notifica_recensione"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="nuova notifica recensione"
-            tools:layout_editor_absoluteX="75dp"
-            tools:layout_editor_absoluteY="269dp" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout3_home_client"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <ImageView
+                    android:id="@+id/imageView_profile_home_client"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:adjustViewBounds="true"
+                    android:foreground="@drawable/gradient_image"
+                    android:foregroundTintMode="src_atop"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3_home_client"
+                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout3_home_client"
+                    app:layout_constraintStart_toStartOf="@+id/constraintLayout3_home_client"
+                    app:layout_constraintTop_toTopOf="@+id/constraintLayout3_home_client"
+                    app:srcCompat="@drawable/profile_image" />
+
+                <TextView
+                    style="@style/title_card"
+                    android:id="@+id/textview_profile_menu_client"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/profile"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3_home_client"
+                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout3_home_client"
+                    app:layout_constraintStart_toStartOf="@id/constraintLayout3_home_client"
+                    app:layout_constraintTop_toTopOf="@+id/constraintLayout3_home_client"
+                    app:layout_constraintVertical_bias=".9"
+                    tools:ignore="MissingConstraints" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_notifications_home_client"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/card_dimension"
+            android:layout_margin="10dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardview_profile_home_client"
+
+            app:layout_constraintVertical_bias=".0">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout4_home_client"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <ImageView
+                    android:id="@+id/imageView_notification_home_client"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:adjustViewBounds="true"
+                    android:foreground="@drawable/gradient_image"
+                    android:foregroundTintMode="src_atop"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4_home_client"
+                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout4_home_client"
+                    app:layout_constraintStart_toStartOf="@+id/constraintLayout4_home_client"
+                    app:layout_constraintTop_toTopOf="@+id/constraintLayout4_home_client"
+                    app:srcCompat="@drawable/notifications_image" />
+
+                <TextView
+                    style="@style/title_card"
+                    android:id="@+id/textview_notification_menu_client"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/notification_title"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4_home_client"
+                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout4_home_client"
+                    app:layout_constraintStart_toStartOf="@id/constraintLayout4_home_client"
+                    app:layout_constraintTop_toTopOf="@+id/constraintLayout4_home_client"
+                    app:layout_constraintVertical_bias=".9"
+                    tools:ignore="MissingConstraints" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/btn_menu_nuova_notifica_ristorante"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nuova notifica ristorante"
-        app:layout_anchor="@+id/constraintLayout2"
-        app:layout_anchorGravity="center" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</ScrollView>
