search con stato notification

--- a/app/src/main/res/layout-land/fragment_notification_list.xml
+++ b/app/src/main/res/layout-land/fragment_notification_list.xml
@@ -59,6 +59,19 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <TextView
+        android:id="@+id/textview_no_result_notifications_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/title"
+        android:text="@string/no_element"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_view_fragment_favourite"
+        app:layout_constraintVertical_bias=".1"
+        android:visibility="invisible"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
