--- a/app/src/main/res/menu/menu_ano.xml
+++ b/app/src/main/res/menu/menu_ano.xml
@@ -8,11 +8,11 @@
         <item
             android:id="@+id/nav_anonymous_restaurant"
             android:icon="@drawable/ic_baseline_restaurant_24"
-            android:title="Restaurant" />
+            android:title="@string/restaurant" />
 
         <item
             android:id="@+id/nav_anonymous_login"
             android:icon="@drawable/ic_baseline_login_24"
-            android:title="Login" />
+            android:title="@string/login" />
     </group>
 </menu>
