--- a/app/src/main/res/menu/menu_user.xml
+++ b/app/src/main/res/menu/menu_user.xml
@@ -7,28 +7,28 @@
         <item
             android:id="@+id/nav_user_dashboard"
             android:icon="@drawable/ic_baseline_dashboard_24"
-            android:title="Dashboard" />
+            android:title="@string/dashboard" />
         <item
             android:id="@+id/nav_user_notifications"
             android:icon="@drawable/ic_baseline_notifications_active_24"
-            android:title="Notifications" />
+            android:title="@string/notification_title" />
         <item
             android:id="@+id/nav_user_profile"
             android:icon="@drawable/ic_baseline_person_24"
-            android:title="Profile" />
+            android:title="@string/profile" />
         <item
             android:id="@+id/nav_user_favourite"
             android:icon="@drawable/ic_baseline_favorite_24"
-            android:title="Favourite" />
+            android:title="@string/favourites" />
         <item
             android:id="@+id/nav_user_restaurant"
             android:icon="@drawable/ic_baseline_restaurant_24"
-            android:title="Restaurant" />
+            android:title="@string/restaurant" />
 
         <item
             android:id="@+id/nav_user_logout"
             android:icon="@drawable/ic_baseline_logout_24"
-            android:title="Logout" />
+            android:title="@string/logout" />
         <item
             android:id="@+id/nav_user_test"
             android:title="Test" />
