--- a/app/src/main/res/layout-land/fragment_restaurants_list__client.xml
+++ b/app/src/main/res/layout-land/fragment_restaurants_list__client.xml
@@ -79,5 +79,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/swipe_refresh_fragment_favourite"
         app:layout_constraintVertical_bias=".1"
+        android:visibility="invisible"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
