--- a/app/src/main/res/layout-land/fragment_restaurants_list__client.xml
+++ b/app/src/main/res/layout-land/fragment_restaurants_list__client.xml
@@ -25,6 +25,25 @@
         app:layout_constraintVertical_bias="0.009"
         app:showAsAction="ifRoom|collapseActionView" />
 
+    <TextView
+        android:id="@+id/filter_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/badge_shape"
+        android:elevation="7dp"
+        android:text=" 3 "
+        android:textColor="@color/white"
+        android:visibility="invisible"
+
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_filter_restaurants_list"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_filter_restaurants_list"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias=".02"
+        />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_filter_restaurants_list"
         style="@style/main_button_style"
